Fixed spelling; added whitespace margin around text in 'elem' element containers

--- a/00-Project/css/style.css
+++ b/00-Project/css/style.css
@@ -25,6 +25,10 @@ body {
     justify-content: center;
 }
 
+.elem {
+    margin: 0 2%;
+}
+
 .elem span {
     display: flex;
 }
